management/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: grafana
  name: grafana
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grafana
  template:
    metadata:
      labels:
        name: grafana
    spec:
      containers:
      - name: grafana 
        image: grafana/grafana:6.6.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: grafana
          protocol: TCP        
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /etc/grafana/grafana.ini
          name: config
          subPath: grafana.ini
        - mountPath: /var/lib/grafana
          name: storage
      securityContext:
        fsGroup: 472
        runAsUser: 472
      serviceAccount: monitor-user
      serviceAccountName: monitor-user
      volumes:
      - configMap:
          defaultMode: 420
          name: grafana
        name: config
#     - emptyDir: {}
#       name: storage
      - name: storage
        persistentVolumeClaim:
          claimName: grafana
