management/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.2.1
        args:
        - "--config.file=/etc/prometheus/prometheus.config"
        - "--storage.tsdb.path=/prometheus/"
        - "--storage.tsdb.retention.time=30d"
        - "--storage.tsdb.retention.size=512MB"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
        - name: prometheus-storage-volume
          mountPath: /prometheus/
      volumes:
      - name: prometheus-config-volume
        configMap:
          defaultMode: 420
          name: prometheus-server-conf
 #    - name: prometheus-storage-volume
 #      emptyDir: {}
      - name: prometheus-storage-volume
        persistentVolumeClaim:
          claimName: prometheus  
      serviceAccount: monitor-user
      serviceAccountName: monitor-user
