management/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: monitor
spec:
  selector:
    name: grafana
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
