management/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitor
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
spec:
 selector:
   app: prometheus
 ports:
 - port: 9090
   targetPort: 9090
