management/prometheus-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
spec:
 selector:
   app: prometheus
 clusterIP: None  
 ports:
 - port: 9090
   targetPort: 9090
---
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: default
spec:
  serviceName: prometheus
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.16.0
        args:
        - "--config.file=/etc/prometheus/prometheus.config"
        - "--storage.tsdb.path=/prometheus/"
        - "--storage.tsdb.retention.time=30d"
        - "--storage.tsdb.retention.size=512MB"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
        - name: prometheus-storage-volume
          mountPath: /prometheus/
      volumes:
      - name: prometheus-config-volume
        configMap:
          defaultMode: 420
          name: prometheus-server-conf
 #    - name: prometheus-storage-volume
 #      emptyDir: {}
 #    - name: prometheus-storage-volume
 #      persistentVolumeClaim:
 #        claimName: prometheus  
      serviceAccount: monitor-user
      serviceAccountName: monitor-user
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      labels:
        app: prometheus
      name: prometheus-storage-volume
    spec:
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 1Gi
      storageClassName: nfs-storageclass
      volumeMode: Filesystem
