management/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.dv.kube.io
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 9090
